--- a/.travis.yml
+++ b/.travis.yml
@@ -5,11 +5,12 @@ sudo: false
 notifications:
   email: false
 rvm:
-  - 2.7.0
+  - 2.7.1
   - 2.6.5
-  - 2.5.7
 before_script:
-  - 'curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter'
+  - "curl -L
+    https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64
+    > ./cc-test-reporter"
   - chmod +x ./cc-test-reporter
   - "./cc-test-reporter before-build"
 after_script:
